--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,8 @@ services:
   - type: web
     name: espocrm
     env: docker
-    plan: free
     region: oregon
-    dockerfilePath: ./Dockerfile
+    plan: free
+    dockerComposePath: ./docker-compose.yml
     autoDeploy: true
+
